# marketplace_microservices

catalog_service/: Dockerfile  pyproject.toml
catalog_service/env/: database.env.example
catalog_service/migrations/: env.py
catalog_service/migrations/versions/: 29fc426766fd_.py
catalog_service/src/catalog_service/: bootstrap.py  main.py
catalog_service/src/catalog_service/application/ports/: product_repo.py
catalog_service/src/catalog_service/application/services/: create_product.py  get_all_products.py  get_stock.py  reserve_stock.py
catalog_service/src/catalog_service/domain/entities/: product.py
catalog_service/src/catalog_service/domain/exceptions/: catalog_errors.py
catalog_service/src/catalog_service/infrastructure/db/: mappers.py  models.py
catalog_service/src/catalog_service/infrastructure/di/: container.py  providers.py
catalog_service/src/catalog_service/infrastructure/repositories/: sqlalchemy_product_repo.py  sqlalchemy_project_repo.py
catalog_service/src/catalog_service/presentation/api/: product_router.py
catalog_service/src/catalog_service/presentation/dependencies/: __init__.py
catalog_service/src/catalog_service/presentation/mappers/: product_mappers.py
catalog_service/src/catalog_service/presentation/schemas/: product_schemas.py
catalog_service/tests/: conftest.py
catalog_service/tests/application/services/: conftest.py  test_create_product.py  test_get_stock.py  test_product.py  test_reserve_stock.py
catalog_service/tests/domain/entities/: test_product.py
catalog_service/tests/infrastructure/repositories/: test_sqlalchemy_product_repo.py
catalog_service/tests/presentation/api/: conftest.py  test_api_add_new_product.py  test_api_get_all_products.py  test_api_get_product_stock.py  test_api_reserve_stock.py
order_service/: Dockerfile  pyproject.toml
order_service/migrations/: env.py
order_service/migrations/versions/: 4210855a89f0_create_orders_tables.py
order_service/src/order_service/: bootstrap.py  main.py
order_service/src/order_service/application/ports/: catalog_repo.py  order_repo.py
order_service/src/order_service/application/services/: create_order.py
order_service/src/order_service/domain/entities/: order.py
order_service/src/order_service/domain/exceptions/: catalog_errors.py
order_service/src/order_service/infrastructure/clients/: http_catalog_client.py
order_service/src/order_service/infrastructure/config/: __init__.py  microservices.py
order_service/src/order_service/infrastructure/db/: mappers.py  models.py
order_service/src/order_service/infrastructure/di/: __init__.py  container.py  providers.py
order_service/src/order_service/infrastructure/repositories/: in_memory_order_repo.py  sqlalchemy_order_repo.py
order_service/src/order_service/presentation/api/: order_router.py
order_service/src/order_service/presentation/dependencies/: __init__.py
order_service/src/order_service/presentation/mappers/: order_mappers.py
order_service/src/order_service/presentation/schemas/: order_schemas.py
order_service/tests/: conftest.py
order_service/tests/application/services/: conftest.py  test_create_order.py
order_service/tests/domain/entities/: test_order.py
order_service/tests/infrastructure/: test_http_catalog_client.py
order_service/tests/infrastructure/clients/: test_http_catalog_client.py
order_service/tests/presentation/: test_order_api.py
order_service/tests/presentation/api/: test_order_api.py
user_service/: pyproject.toml
user_service/env/: jwt_token.env.example
user_service/migrations/: env.py
user_service/migrations/versions/: 55ab5c2e1332_.py
user_service/src/user_service/: bootstrap.py  main.py
user_service/src/user_service/application/ports/: password_hasher_repo.py  token_generator.py  token_generator_repo.py  user_repo.py
user_service/src/user_service/application/services/: __init__.py  get_jwt.py  get_profile.py  login_user.py  register_user.py
user_service/src/user_service/domain/entities/: user.py
user_service/tests/: conftest.py
user_service/tests/application/services/: conftest.py  test_get_profile.py  test_login_user.py  test_register_user.py
user_service/tests/domain/entities/: test_user_entity.py
user_service/tests/infrastructure/repositories/: test_bcrypt_password_hasher.py
user_service/tests/presentation/: test_user_router.py
(+35 files in other folders)
