[project]
name = "catalog-service"
version = "0.1.0"
description = "Микросервис \"Catalog Service\""
authors = [
    {name = "Nikita Bondarev",email = "nikitabondarevvitebsk@gmail.com"}
]
license = "No license"
requires-python = ">=3.11, <4.0"
dependencies = [
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "poetry (>=2.4.1,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
