[project]
name = "order-service"
version = "0.1.0"
description = "Микросервис \"Order Service\""
authors = [
    {name = "Nikita Bondarev",email = "nikitabondarevvitebsk@gmail.com"}
]
license = "No license"
requires-python = ">=3.13,<3.15"
dependencies = [
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pytest-httpx (>=0.36.2,<0.37.0)",
    "fastapi[uvicorn] (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.50.0,<0.51.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
