[project]
name = "order-service"
version = "0.1.0"
description = "Микросервис \"Order Service\""
authors = [
    {name = "Nikita Bondarev",email = "nikitabondarevvitebsk@gmail.com"}
]
license = "No license"
requires-python = ">=3.12,<4.0"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.51"
asyncpg = "^0.31.0"
alembic = "^1.18.5"
fastapi = { version = "^0.139.0", extras = ["uvicorn"] }
uvicorn = "^0.50.2"
dishka = "^1.10.1"
pydantic-settings = "^2.14.2"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-cov = "^6.3.0"
testcontainers = "^4.14.2"
ruff = "^0.6.9"
mypy = "^1.20.2"
pre-commit = "^3.8.0"
pytest-httpx = "^0.36.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
