[project]
name = "user-service"
version = "0.1.0"
description = "Микросервис \"User Service\""
authors = [
    {name = "Nikita Bondarev",email = "nikitabondarevvitebsk@gmail.com"}
]
license = "No license"
requires-python = ">=3.11,<3.15"
dependencies = [
    "sqlalchemy[mypy] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "poetry (>=2.4.1,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "fastapi[uvicorn] (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
